--- a/sceptre-project/templates/s3/bucket.yaml
+++ b/sceptre-project/templates/s3/bucket.yaml
@@ -16,6 +16,11 @@ Resources:
   Bucket:
     Type: AWS::S3::Bucket
     Properties:
+      PublicAccessBlockConfiguration:
+        BlockPublicAcls: False
+        BlockPublicPolicy: False
+        IgnorePublicAcls: False
+        RestrictPublicBuckets: False
       BucketEncryption:
         ServerSideEncryptionConfiguration:
           - ServerSideEncryptionByDefault:
